添加flexible的适配

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>v-app</title>
   </head>
   <body>
-    <script src="./node_modules/amfe-flexible/index.js"></script>
+    <!-- <script src="./node_modules/amfe-flexible/index.js"></script> -->
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
