添加底部导航栏

--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
     <meta charset="utf-8">
     <meta name="screen-orientation" content="portrait"/>
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="format-detection" content="telephone=no">
-    <meta name="full-screen" content="yes">
-    <meta name="x5-fullscreen" content="true">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+    <script src="./node_modules/amfe-flexible/index.js"></script>
     <title>v-app</title>
   </head>
   <body>
-    <!-- <script src="./node_modules/amfe-flexible/index.js"></script> -->
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
