--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="./node_modules/amfe-flexible/index.js"></script>
     <title>v-app</title>
   </head>
+  <link rel="stylesheet" href="src/assets/css/font-awesome.min.css">
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
