--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="screen-orientation" content="portrait"/>
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-    <script src="./node_modules/amfe-flexible/index.js"></script>
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+    <meta name="msapplication-tap-highlight" content="no">
+    <meta name="viewport" content="width=750px, user-scalable=no">
+    <meta name="format-detection" content="telephone=no" />
     <title>v-app</title>
   </head>
+  <link rel="stylesheet" href="src/assets/css/reset.css">
   <link rel="stylesheet" href="src/assets/css/font-awesome.min.css">
   <body>
     <div id="app"></div>
