--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="x5-fullscreen" content="true">
     <title>v-app</title>
   </head>
+  <link rel="shortcut icon" href="favicon.ico" /> 
   <link rel="stylesheet" href="src/assets/css/font-awesome.min.css">
   <body>
     <div id="app"></div>
