首页静态效果

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
   <link rel="shortcut icon" href="favicon.ico" /> 
   <link rel="stylesheet" href="src/assets/css/font-awesome.min.css">
   <body>
+    <noscript>
+      <p>本页面需要浏览器支持（启用）JavaScript</p>
+    </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
