添加返回顶部

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="format-detection" content="telephone=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maxmum-scale=1, minmum-scale=1, user-scalable=no, minimal-ui">
     <!-- uc强制竖屏 -->
     <meta name="screen-orientation" content="portrait">
     <!-- UC强制全屏 --> 
